--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fullstack
-        image: manojkrishnappa/fullstack:20250801
+        image: Rohitdevops73/fullstack:replaceImageTag
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
