--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fullstack
-        image: Rohitdevops73/fullstack:replaceImageTag
+        image: rohitkube/fullstack:replaceImageTag
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
