Update deployment image to version 10

--- a/argocd-manifest/deployment.yml
+++ b/argocd-manifest/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fullstack
-        image: rohitkube/fullstack:replaceImageTag
+        image: rohitkube/fullstack:10
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
